@@ -671,8 +671,10 @@ theme_thumbnail_factory_init (int argc, char *argv[])
 GdkPixbuf *
 generate_gtk_theme_thumbnail (GnomeThemeInfo *info)
 {
+  GdkDisplayManager *manager;
+  GdkDisplay *display, *default_display;
+  GdkScreen *screen;
   GObject *settings;
-  char *current_theme;
   GtkWidget *window, *vbox, *box, *stock_button, *checkbox, *radio;
   GtkRequisition requisition;
   GtkAllocation allocation;
@@ -681,12 +683,17 @@ generate_gtk_theme_thumbnail (GnomeThemeInfo *info)
   GdkPixbuf *pixbuf, *ret;
   gint width, height;
 
-  settings = G_OBJECT (gtk_settings_get_default ());
-  g_object_get (settings, "gtk-theme-name", &current_theme, NULL);
+  display = gdk_display_open (gdk_get_display_arg_name ());
+  screen =  gdk_display_get_default_screen (display);
+
+  settings = G_OBJECT (gtk_settings_get_for_screen (screen));
   g_object_set (settings, "gtk-theme-name", info->name, NULL);
 
+  manager = gdk_display_manager_get ();
+  default_display = gdk_display_manager_get_default_display (manager);
+  gdk_display_manager_set_default_display (manager, display);
+
   window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-  //gtk_window_set_default_size (GTK_WINDOW (window), ICON_SIZE_WIDTH, ICON_SIZE_HEIGHT);
 
   vbox = gtk_vbox_new (FALSE, 0);
   gtk_container_add (GTK_CONTAINER (window), vbox);
@@ -740,6 +747,8 @@ generate_gtk_theme_thumbnail (GnomeThemeInfo *info)
   fake_expose_widget (checkbox, pixmap, NULL);
   fake_expose_widget (radio, pixmap, NULL);
 
+  gdk_display_flush (display);
+  gtk_widget_destroy (window);
 
   pixbuf = gdk_pixbuf_new (GDK_COLORSPACE_RGB, TRUE, 8, width, height);
   gdk_pixbuf_get_from_drawable (pixbuf, pixmap, NULL, 0, 0, 0, 0, width, height);
@@ -750,9 +759,9 @@ generate_gtk_theme_thumbnail (GnomeThemeInfo *info)
                                  GDK_INTERP_BILINEAR);
   g_object_unref (pixbuf);
 
-  gtk_widget_destroy (window);
-  g_object_set (settings, "gtk-theme-name", current_theme, NULL);
-  g_free (current_theme);
+  gdk_display_manager_set_default_display (manager, default_display);
+  gdk_display_close (display);
+  
   return ret;
 }
 
