@@ -1,3 +1,8 @@
+2007-06-09  Denis Washington  <denisw@svn.gnome.org>
+
+	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
+	Fix the appearance capplet windows not reacting to gtk+ theme changes.
+
 2007-06-07  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (handle_change_signal),
